feat: some updates to pre-process of sequestration ACR split

--- a/notebooks/sequestration_split_acr.ipynb
+++ b/notebooks/sequestration_split_acr.ipynb
@@ -12,8 +12,9 @@
     "import random\n",
     "import uuid\n",
     "import hashlib\n",
-    "from pathlib import PosixPath\n",
+    "from pathlib import PosixPath, Path\n",
     "import pandas as pd\n",
+    "from itertools import chain\n",
     "\n",
     "csv.field_size_limit(sys.maxsize)"
    ]
@@ -35,15 +36,15 @@
    "outputs": [],
    "source": [
     "submissions = [\n",
-    "    # \"packages_acrimage/2021/06\",\n",
-    "    # \"packages_acrimage/2021/07\",\n",
-    "    # \"packages_acrimage/2021/08\",\n",
-    "    # \"packages_acrimage/2021/0827\",\n",
+    "    # \"2021/06\",\n",
+    "    # \"2021/07\",\n",
+    "    \"2021/08\",\n",
+    "    \"2021/0827\",\n",
     "    # \"packages_acrimage/PETAL\",\n",
-    "    # \"packages_acrimage/2021/09\",\n",
-    "    # \"packages_acrimage/2021/10/batch6\",\n",
-    "    # \"packages_acrimage/2021/10/batch7\",\n",
-    "    # \"packages_acrimage/2021/11\",\n",
+    "    \"2021/09\",\n",
+    "    \"2021/10/batch6\",\n",
+    "    \"2021/10/batch7\",\n",
+    "    \"2021/11\",\n",
     "    # \"packages_acrimage/2021/ACRPETAL_20211220\",\n",
     "    # \"packages_acrimage/2022/ACR_20220107\",\n",
     "    # \"ACR_20211115\",\n",
@@ -52,7 +53,7 @@
     "]\n",
     "\n",
     "submission_path = PosixPath(\n",
-    "    \"~/CTDS/projects/midrc/indexing-data/packages_acr\"\n",
+    "    \"~/CTDS/projects/midrc/ssot-s3/replicated-data-acr/acrclinical\"\n",
     ").expanduser()\n",
     "\n",
     "to_index_path = submission_path / \"..\" / \"to_index_acr\"\n",
@@ -62,7 +63,7 @@
     "(to_index_path/\"missing\").mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "sequestration_master_file_path = PosixPath(\n",
-    "    \"~/CTDS/projects/midrc/indexing-data/sequestration/master_sequestration_locations_16188_2022-04-13.tsv\"\n",
+    "    \"~/CTDS/projects/midrc/indexing-data/sequestration/master_sequestration_locations_31927_2022-09-07.tsv\"\n",
     ").expanduser()"
    ]
   },
@@ -72,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAW_DATA = PosixPath(\"~/CTDS/projects/midrc/processed-s3/acrimage\").expanduser()\n",
+    "RAW_DATA = PosixPath(\"~/CTDS/projects/midrc/ssot-s3\").expanduser()\n",
     "\n",
     "# for RemoveHeads files, they have the same structure and needs to remove imaging_study\n",
     "# which is `submitter_id` in the format of\n",
@@ -94,11 +95,12 @@
     "    \"study_uid\": \"study_id\",\n",
     "}\n",
     "\n",
-    "deletion_imaging_study_files = RAW_DATA.glob(\"**/deletion_*.tsv\")\n",
+    "deletion_imaging_study_files = RAW_DATA.glob(\"**/deletion_imaging_*.tsv\")\n",
     "deletion_imaging_study_studies = map(lambda v: pd.read_csv(v, sep=\"\\t\") \\\n",
     "        .rename(columns=rename_columns),\n",
     "    deletion_imaging_study_files)\n",
     "deletion_imaging_study_studies = map(lambda v: v[[\"study_id\"]], deletion_imaging_study_studies)\n",
+    "\n",
     "deletion_imaging_study_studies = pd.concat(deletion_imaging_study_studies).reset_index(drop=True)\n",
     "\n",
     "studies_to_delete = pd.concat([remove_heads_studies, deletion_imaging_study_studies]).reset_index(drop=True)\n",
@@ -117,6 +119,190 @@
     "\n",
     "    for row in reader:\n",
     "        seq_master[row[\"case_ids\"]] = row[\"dataset\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_path = Path(submission_path) / submission\n",
+    "\n",
+    "image_manifest_file = list(\n",
+    "    chain(\n",
+    "        sub_path.glob(\"**/CIRR*.txt\"),\n",
+    "        sub_path.glob(\"**/*image_manifest*.txt\"),\n",
+    "        sub_path.glob(\"**/image_*.txt\"),\n",
+    "        sub_path.glob(\"image_*.tsv\"),\n",
+    "        sub_path.glob(\"*_instance_*.tsv\"),\n",
+    "    )\n",
+    ")\n",
+    "# studies_file = list(SUBMISSION_PATH.glob(\"*imaging_study_*.tsv\"))[0]\n",
+    "series_files = list(\n",
+    "    chain(\n",
+    "        sub_path.glob(\"**/*_series_*.txt\"),\n",
+    "        sub_path.glob(\"*_series_*.tsv\"),\n",
+    "    )\n",
+    ")\n",
+    "list(sub_path.glob(\"**/*_series_*.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for submission in submissions:\n",
+    "    print(submission)\n",
+    "    # packages_path = Path(output_path) / submission\n",
+    "    # packages_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    sub_path = Path(submission_path) / submission\n",
+    "\n",
+    "    image_manifest_file = list(\n",
+    "        chain(\n",
+    "            sub_path.glob(\"**/CIRR*.txt\"),\n",
+    "            sub_path.glob(\"**/*image_manifest*.txt\"),\n",
+    "            sub_path.glob(\"**/image_*.txt\"),\n",
+    "            sub_path.glob(\"image_*.tsv\"),\n",
+    "            sub_path.glob(\"*_instance_*.tsv\"),\n",
+    "        )\n",
+    "    )\n",
+    "    # studies_file = list(SUBMISSION_PATH.glob(\"*imaging_study_*.tsv\"))[0]\n",
+    "    series_files = list(\n",
+    "        chain(\n",
+    "            sub_path.glob(\"**/*_series_*.txt\"),\n",
+    "            sub_path.glob(\"*_series_*.tsv\"),\n",
+    "        )\n",
+    "    )\n",
+    "    print(list(series_files))\n",
+    "    # instance_files = list(SUBMISSION_PATH.glob(\"*_instance_*.tsv\"))\n",
+    "\n",
+    "    rename_columns = {\n",
+    "        \"case_ids\": \"case_id\",\n",
+    "        \"Subject_ID\": \"case_id\",\n",
+    "        \"series_uid\": \"series_id\",\n",
+    "        \"dr_exams.submitter_id\": \"study_id\",\n",
+    "        \"radiography_exam.submitter_id\": \"study_id\",\n",
+    "        \"radiography_exams.submitter_id\": \"study_id\",\n",
+    "        \"ct_scan.submitter_id\": \"study_id\",\n",
+    "        \"ct_scans.submitter_id\": \"study_id\",\n",
+    "        \"mr_exams.submitter_id\": \"study_id\",\n",
+    "        \"nm_exams.submitter_id\": \"study_id\",\n",
+    "        \"pt_scans.submitter_id\": \"study_id\",\n",
+    "        \"pr_exams.submitter_id\": \"study_id\",\n",
+    "        \"rf_exams.submitter_id\": \"study_id\",\n",
+    "        \"series-submitter\": \"submitter_id\",\n",
+    "        \"imaging_studies.submitter_id\": \"study_id\",\n",
+    "    }\n",
+    "\n",
+    "    series = map(\n",
+    "        lambda v: pd.read_csv(v, sep=\"\\t\").rename(columns=rename_columns), series_files\n",
+    "    )\n",
+    "    series = pd.concat(series, ignore_index=True).reset_index(drop=True)\n",
+    "\n",
+    "    # series[\"study_id\"] = series[\"study_id\"].apply(lambda v: v.split(\"_\")[1])\n",
+    "\n",
+    "    series = series[[\"series_id\", \"study_id\", \"case_id\"]].drop_duplicates()\n",
+    "\n",
+    "    # series\n",
+    "\n",
+    "    rename_columns = {\n",
+    "        \"case_ids\": \"case_id\",\n",
+    "        \"study_uid\": \"study_id\",\n",
+    "        \"ct_scans.submitter_id\": \"study_id\",\n",
+    "        \"radiography_exam.submitter_id\": \"study_id\",\n",
+    "        \"series_uid\": \"series_id\",\n",
+    "        \"series.submitter_id\": \"series_id\",\n",
+    "        \"cr_series.submitter_id\": \"series_id\",\n",
+    "        \"ct_series.submitter_id\": \"series_id\",\n",
+    "        \"dx_series.submitter_id\": \"series_id\",\n",
+    "        \"*md5sum\": \"md5sum\",\n",
+    "        \"mdsum\": \"md5sum\",\n",
+    "        \"*file_name\": \"file_name\",\n",
+    "        \"*file_size\": \"file_size\",\n",
+    "        \"submitter_id\": \"instance_id\",\n",
+    "        \"object_id\": \"instance_id\",\n",
+    "    }\n",
+    "\n",
+    "    instances = map(\n",
+    "        lambda v: pd.read_csv(v, sep=\"\\t\").rename(columns=rename_columns),\n",
+    "        image_manifest_file,\n",
+    "    )\n",
+    "    instances = pd.concat(instances, ignore_index=True).reset_index(drop=True)\n",
+    "\n",
+    "    # instances[\"series_id\"] = instances[\"series_id\"].apply(lambda v: v.split(\"_\")[1])\n",
+    "    # instances[\"study_id\"] = instances[\"study_id\"].apply(lambda v: v.split(\"_\")[1])\n",
+    "\n",
+    "    instances = instances.merge(series, on=[\"case_id\", \"series_id\"])\n",
+    "\n",
+    "    if instances[\"file_size\"].dtype == np.dtype(\"O\"):\n",
+    "        instances[\"file_size\"] = instances[\"file_size\"].apply(lambda v: locale.atoi(v))\n",
+    "    instances = instances[\n",
+    "        [\n",
+    "            \"file_name\",\n",
+    "            \"file_size\",\n",
+    "            \"md5sum\",\n",
+    "            \"case_id\",\n",
+    "            \"study_id\",\n",
+    "            \"series_id\",\n",
+    "            \"instance_id\",\n",
+    "            \"storage_urls\",\n",
+    "        ]\n",
+    "    ].drop_duplicates()\n",
+    "\n",
+    "    # instances\n",
+    "\n",
+    "    list_of_packages = []\n",
+    "\n",
+    "    break\n",
+    "\n",
+    "    # for _, row in instances.iterrows():\n",
+    "    #     case_id = row[\"case_id\"]\n",
+    "    #     study_id = row[\"study_id\"]\n",
+    "    #     series_id = row[\"series_id\"]\n",
+    "\n",
+    "    #     series_path = f\"./cases/{case_id}/{study_id}/{series_id}.tsv\\n\"\n",
+    "    #     if series_path not in list_of_packages:\n",
+    "    #         list_of_packages.append(series_path)\n",
+    "\n",
+    "    #     folder = packages_path / \"cases\" / case_id / study_id\n",
+    "\n",
+    "    #     folder.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    #     series_file = folder / f\"{series_id}.tsv\"\n",
+    "    #     series_file_exist = series_file.exists()\n",
+    "\n",
+    "    #     with open(series_file, mode=\"a\") as f:\n",
+    "    #         fieldnames = [\n",
+    "    #             \"file_name\",\n",
+    "    #             \"file_size\",\n",
+    "    #             \"md5sum\",\n",
+    "    #             \"case_id\",\n",
+    "    #             \"study_id\",\n",
+    "    #             \"series_id\",\n",
+    "    #             \"instance_id\",\n",
+    "    #             \"storage_urls\",\n",
+    "    #         ]\n",
+    "    #         writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=fieldnames)\n",
+    "\n",
+    "    #         if not series_file_exist:\n",
+    "    #             writer.writeheader()\n",
+    "    #         writer.writerow(row.to_dict())\n",
+    "\n",
+    "    # with open(packages_path / \"packages.txt\", \"w\") as f:\n",
+    "    #     f.writelines(list_of_packages)"
    ]
   },
   {
