feat: notebook on how to work with Amazon S3 Inventory files
To keep track of all the files and simplify processing, MIDRC have Amazon S3 Inventory configured: https://docs.aws.amazon.com/AmazonS3/latest/userguide/storage-inventory.html

--- a/notebooks/work_with_inventory.ipynb
+++ b/notebooks/work_with_inventory.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/wd/inventory/external-data-midrc-replication/external-data-midrc-replication-inventory-configuration/\")\n",
-    "PATH = PATH / \"2022-06-26T00-00Z\" / \"manifest.json\""
+    "PATH = Path(\"/Users/andrewprokhorenkov/CTDS/projects/midrc/data/inventory/\")\n",
+    "PATH = PATH / \"2022-10-23T00-00Z/\" / \"manifest.json\""
    ]
   },
   {
@@ -40,19 +40,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsvs = []\n",
+    "# Bucket, Key, Size, LastModifiedDate, StorageClass, ReplicationStatus, EncryptionStatus, IntelligentTieringAccessTier, BucketKeyStatus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size = 0\n",
     "\n",
     "for obj in manifest['files']:\n",
     "    print(obj)\n",
-    "    gzip_obj = f\"/Users/andrewprokhorenkov/CTDS/projects/midrc/wd/inventory/{obj['key']}\"\n",
+    "    obj_path = obj[\"key\"].replace(\"external-data-midrc-replication/external-data-midrc-replication-inventory-configuration/\", \"\")\n",
+    "    gzip_obj = f\"/Users/andrewprokhorenkov/CTDS/projects/midrc/data/inventory/{obj_path}\"\n",
     "    buffer = gzip.open(gzip_obj, mode='rt')\n",
     "    reader = csv.reader(buffer)\n",
     "    for row in reader:\n",
+    "        size += int(row[2])\n",
     "        # print(row)\n",
     "        # break\n",
-    "        filename = row[1]\n",
-    "        if filename[-4:] == \".dcm\":\n",
-    "            tsvs.append(filename)"
+    "        # filename = row[1]\n",
+    "        # if filename[-4:] == \".dcm\":\n",
+    "        #     tsvs.append(filename)\n",
+    "\n",
+    "        # break\n",
+    "    # break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size"
    ]
   },
   {
