Update MIDRIC DOI setup notebook

--- a/DOI/setup_MIDRC_DOI.ipynb
+++ b/DOI/setup_MIDRC_DOI.ipynb
@@ -1,23 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91760939",
+   "cell_type": "markdown",
+   "id": "59fd2792",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git_dir='/Users/christopher/Documents/GitHub'\n",
-    "sdk_dir='/cgmeyer/gen3sdk-python'\n",
-    "sys.path.insert(1, '{}{}'.format(git_dir,sdk_dir))\n",
-    "from expansion.expansion import Gen3Expansion\n",
-    "%run /Users/christopher/Documents/GitHub/cgmeyer/gen3sdk-python/expansion/expansion.py\n"
+    "# Example Script: Manually Creating a Single DOI and Persisting the Metadata in Gen3 (Specifically MIDRC)\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "Before running this example script, make sure you have the following prerequisites:\n",
+    "\n",
+    "- An environment variable `DATACITE_USERNAME` set as a valid DataCite username for interacting with their API.\n",
+    "- An environment variable `DATACITE_PASSWORD` set as a valid DataCite password for interacting with their API.\n",
+    "\n",
+    "## Overview:\n",
+    "\n",
+    "\n",
+    "1. Setting up the necessary classes for interacting with Gen3 & Datacite.\n",
+    "2. Getting the DOI metadata (ideally from some external source like a file or another API, but here we've hard-coded it).\n",
+    "3. Creating/Minting the DOI in DataCite.\n",
+    "4. Persisting the DOI metadata into a Gen3 Discovery record in the metadata service.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6de689f6",
+   "id": "2057da95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +46,264 @@
     "  DigitalObjectIdentifier,\n",
     "  DigitalObjectIdentifierCreator,\n",
     "  DigitalObjectIdentifierTitle,\n",
-    ")\n"
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b33cfc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username = 'your_username'  # Replace 'your_username' with the actual username\n",
+    "git_dir = f'/Users/{username}/Documents/GitHub'\n",
+    "sdk_dir = '/cgmeyer/gen3sdk-python'\n",
+    "sys.path.insert(1, f'{git_dir}{sdk_dir}')\n",
+    "from expansion.expansion import Gen3Expansion\n",
+    "%run f'/Users/{username}/Documents/GitHub/cgmeyer/gen3sdk-python/expansion/expansion.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892023ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Don't usually work in production for this; mint the DOI in staging MDS and release to prod on monthly cycle (but the commons URLs will point to prod!)\n",
+    "# api = 'https://data.midrc.org'\n",
+    "# cred = '/Users/christopher/Downloads/midrc-credentials.json'\n",
+    "# auth = Gen3Auth(api, refresh_file=cred)\n",
+    "# sub = Gen3Submission(api, auth)\n",
+    "# query = Gen3Query(auth)\n",
+    "# index = Gen3Index(auth)\n",
+    "# exp = Gen3Expansion(api,auth,sub)\n",
+    "# exp.get_project_ids()\n",
+    "\n",
+    "## Initialize Gen3 SDK for MIDRC Staging\n",
+    "sapi = 'https://staging.midrc.org'\n",
+    "scred = f'/Users/{username}/Downloads/midrc-staging-credentials.json'\n",
+    "sauth = Gen3Auth(sapi, refresh_file=scred)\n",
+    "ssub = Gen3Submission(sapi, sauth)\n",
+    "sindex = Gen3Index(sauth)\n",
+    "squery = Gen3Query(sauth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d0f6be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### download and import some custom Python scripts from https://github.com/cgmeyer/gen3sdk-python\n",
+    "doi_dir = f\"/Users/{username}/Documents/Notes/MIDRC/DOI\" #set your working dir\n",
+    "os.chdir(doi_dir)\n",
+    "os.system(\"wget https://raw.githubusercontent.com/cgmeyer/gen3sdk-python/master/expansion/expansion.py -O expansion.py\")\n",
+    "%run expansion.py # Some additional functions in Gen3Expansion class\n",
+    "sexp = Gen3Expansion(sapi,sauth,ssub)\n",
+    "sexp.get_project_ids()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbfd2ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get existing metadata from MDS\n",
+    "# https://ibdgc.datacommons.io/mds/metadata?_guid_type=discovery_metadata&limit=9999\n",
+    "\n",
+    "mds = sexp.get_mds(limit=9999,args=\"_guid_type=discovery_metadata\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a72a0f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy of the test MDS record for test DOI:\n",
+    " \n",
+    "mguid = \"P67C-YW54\"\n",
+    "m = {}\n",
+    "m[mguid] = mds[mguid]\n",
+    "\n",
+    "\"\"\"\n",
+    "{'P67C-YW54': {'_guid_type': 'discovery_metadata',\n",
+    "  'gen3_discovery': {'authz': '/programs/Open',\n",
+    "   'commons': 'MIDRC',\n",
+    "   'doi_url': 'https://staging.midrc.org/discovery/P67C-YW54/',\n",
+    "   'abstract': 'Data used in the development and evaluation of AI models play a significant role in the robustness and generalizability of the model performance. To enable independent evaluation of many algorithms using data from MIDRC, a sequestered commons was created using a developed method of multi-dimensional stratified sampling. The sequestered commons is restricted from public download access but will be used for the formal evaluation of finalized algorithms. To draw from the commons an independent sample for performance evaluation, a method of task-based distribution sampling by optimized quota sampling was also developed.',\n",
+    "   'data_url': 'https://github.com/MIDRC/Stratified_Sampling/',\n",
+    "   'doi_dates': [],\n",
+    "   'doi_sizes': [],\n",
+    "   'doi_title': 'MIDRC Stratified Sampling Manuscript Cohort',\n",
+    "   'full_name': 'MIDRC Stratified Sampling Manuscript Cohort',\n",
+    "   '_unique_id': 'P67C-YW54',\n",
+    "   'doi_titles': 'MIDRC Stratified Sampling Manuscript Cohort',\n",
+    "   'short_name': 'MIDRC10.82666/P67C-YW54',\n",
+    "   'cases_count': 5000,\n",
+    "   'doi_contact': 'https://www.midrc.org/midrc-contact',\n",
+    "   'doi_formats': [],\n",
+    "   'doi_version': '1',\n",
+    "   'files_count': '1',\n",
+    "   'doi_citation': 'Baughan, Natalie; Whitney, Heather; Myers, Kyle J.; Giger, Maryellen L. (2023). MIDRC Stratified Sampling Manuscript Cohort (Version 1) [Data set]. Medical Imaging and Data Resource Center (MIDRC). https://doi.org/10.82666/P67C-YW54',\n",
+    "   'doi_creators': 'Natalie Baughan ORCID: https://orcid.org/0000-0002-3219-9291, Heather M. Whitney ORCID: https://orcid.org/0000-0002-7258-1102, Kyle J. Myers ORCID: https://orcid.org/0000-0001-7394-4932, Maryellen L. Giger ORCID: https://orcid.org/0000-0001-5482-9728',\n",
+    "   'doi_language': None,\n",
+    "   'doi_subjects': [],\n",
+    "   'doi_publisher': 'Medical Imaging and Data Resource Center (MIDRC)',\n",
+    "   'doi_identifier': '10.82666/P67C-YW54',\n",
+    "   'doi_rightsList': [],\n",
+    "   'doi_description': '',\n",
+    "   'doi_identifiers': '',\n",
+    "   'data_description': 'Spreadsheet of metadata for a cohort of 5000 MIDRC subjects.',\n",
+    "   'doi_contributors': '',\n",
+    "   'doi_geoLocations': [],\n",
+    "   'doi_is_available': 'Yes',\n",
+    "   'doi_resource_type': 'Dataset',\n",
+    "   'data_download_links': [{'guid': 'dg.MD1R/1cad1ea9-3749-4484-bbea-1787f6d4006e',\n",
+    "     'title': 'MIDRC Stratified Sampling Manuscript Cohort',\n",
+    "     'description': 'Spreadsheet of metadata for the DOI cohort.'}],\n",
+    "   'doi_resolvable_link': 'https://doi.org/10.82666/P67C-YW54',\n",
+    "   'doi_publication_year': 2023,\n",
+    "   'doi_access_information': \"Use the 'Download File' button below in the 'Data Download Links' section to access the spreadsheet of data for this cohort.\",\n",
+    "   'doi_funding_references': 'National Institute of Biomedical Imaging and Bioengineering',\n",
+    "   'doi_relatedIdentifiers': [],\n",
+    "   'doi_version_information': 'This is version 1 of this Dataset.',\n",
+    "   'doi_alternateIdentifiers': '',\n",
+    "   'doi_access_information_link': 'https://staging.midrc.org/discovery/P67C-YW54/'}}}\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "348cb5a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create DOI following SDK instructions using production DataCite site\n",
+    "# https://github.com/uc-cdis/gen3sdk-python/blob/master/docs/howto/discoveryMetadataTools.md#dois-in-gen3-discovery-metadata-and-page-for-visualizing-public-doi-metadata\n",
+    "##############################################################################\n",
+    "\n",
+    "# bin bash command\n",
+    "# SET VARIABLES\n",
+    "DATACITE_USERNAME= # in keeper\n",
+    "DATACITE_PASSWORD= # in keeper\n",
+    "\n",
+    "# This prefix is provided by DataCite and is specific to MIDRC\n",
+    "#PREFIX = \"10.82666\" # this is the test DataCite prefix for MIDRC\n",
+    "PREFIX = \"10.60701\" # this is the production DataCite prefix for MIDRC\n",
+    "gen3_metadata_guid = \"P67C-YW55\" # I just made this up. No idea how I'm supposed to generate this?\n",
+    "\n",
+    "PUBLISHER = \"Medical Imaging and Data Resource Center (MIDRC)\"\n",
+    "COMMONS_DISCOVERY_PAGE = \"https://data.midrc.org/discovery\"\n",
+    "DOI_DISCLAIMER = \"\"\n",
+    "DOI_ACCESS_INFORMATION = \"Use the 'Download File' button below in the 'Data Download Links' section to access the spreadsheet of data for this cohort.\"\n",
+    "DOI_CONTACT = \"https://www.midrc.org/midrc-contact\"\n",
+    "\n",
+    "creators = [\n",
+    "  DigitalObjectIdentifierCreator(\n",
+    "    name=\"Baughan, Natalie\",\n",
+    "    name_type=DigitalObjectIdentifierCreator.NAME_TYPE_PERSON,\n",
+    "  ).as_dict(),\n",
+    "  DigitalObjectIdentifierCreator(\n",
+    "    name=\"Whitney, Heather\",\n",
+    "    name_type=DigitalObjectIdentifierCreator.NAME_TYPE_PERSON,\n",
+    "  ).as_dict(),\n",
+    "  DigitalObjectIdentifierCreator(\n",
+    "    name=\"Myers, Kyle J.\",\n",
+    "    name_type=DigitalObjectIdentifierCreator.NAME_TYPE_PERSON,\n",
+    "  ).as_dict(),\n",
+    "  DigitalObjectIdentifierCreator(\n",
+    "    name=\"Giger, Maryellen L.\",\n",
+    "    name_type=DigitalObjectIdentifierCreator.NAME_TYPE_PERSON,\n",
+    "  ).as_dict()\n",
+    "]\n",
+    "\n",
+    "doi_title = 'MIDRC Stratified Sampling Manuscript Cohort'\n",
+    "publisher = \"Medical Imaging and Data Resource Center (MIDRC)\"\n",
+    "publication_year = 2023\n",
+    "doi_type = \"Dataset\"\n",
+    "version = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e1043e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mint_doi_prod(self,\n",
+    "  DATACITE_USERNAME,\n",
+    "  DATACITE_PASSWORD,\n",
+    "  PREFIX,\n",
+    "  gen3_metadata_guid,\n",
+    "  PUBLISHER,\n",
+    "  COMMONS_DISCOVERY_PAGE,\n",
+    "  DOI_CONTACT,\n",
+    "  creators,\n",
+    "  doi_title,\n",
+    "  publisher,\n",
+    "  publication_year,\n",
+    "  doi_type,\n",
+    "  version,\n",
+    "  update = False,\n",
+    "  publish_dois=True, \n",
+    "  use_prod=True,\n",
+    "  DOI_ACCESS_INFORMATION = \"Use the 'Download File' button below in the 'Data Download Links' section to access the spreadsheet of data for this cohort.\",\n",
+    "  DOI_DISCLAIMER = \"\" # This is for the DOI tombstone, so can leave blank\n",
+    "  ):\n",
+    "\n",
+    "  logging = get_logger(\"__name__\", log_level=\"info\")\n",
+    "  identifier = \"{}/{}\".format(PREFIX,gen3_metadata_guid)\n",
+    "  titles = [DigitalObjectIdentifierTitle(doi_title).as_dict()]\n",
+    "\n",
+    "  datacite = DataCite(\n",
+    "    use_prod=use_prod,\n",
+    "    auth_provider=HTTPBasicAuth(DATACITE_USERNAME,DATACITE_PASSWORD))\n",
+    "\n",
+    "\n",
+    "  doi_metadata = {\n",
+    "    \"identifier\": identifier,\n",
+    "    \"creators\": creators,\n",
+    "    \"titles\": titles,\n",
+    "    \"publisher\": publisher,\n",
+    "    \"publication_year\": publication_year,\n",
+    "    \"doi_type\": doi_type,\n",
+    "    \"version\": version,\n",
+    "  }\n",
+    "\n",
+    "  url = COMMONS_DISCOVERY_PAGE.rstrip(\"/\") + f\"/{gen3_metadata_guid}/\"\n",
+    "  DOI_ACCESS_INFORMATION_LINK = url\n",
+    "\n",
+    "  doi = DigitalObjectIdentifier(url=url, **doi_metadata)\n",
+    "\n",
+    "  if publish_dois:\n",
+    "    logging.info(f\"Publishing DOI `{identifier}`...\")\n",
+    "    doi.event = \"publish\"\n",
+    "\n",
+    "  if update:\n",
+    "    response = datacite.update_doi(doi) # UPDATE EXIST DOIs\n",
+    "  else:\n",
+    "    response = datacite.create_doi(doi) # CREATE NEW DOIs\n",
+    "  \n",
+    "  \n",
+    "  doi = DigitalObjectIdentifier.from_datacite_create_doi_response(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be038f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
