updated projects list

--- a/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
+++ b/LOINC_mapping/MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb
@@ -263,10 +263,10 @@
    "source": [
     "os.chdir(loinc_dir)\n",
     "\n",
-    "sprojects = ['Open-R1','Open-A1','Open-A1_PETAL_REDCORAL']\n",
+    "sprojects = sexp.get_project_ids(node='program',name=['Open'])\n",
     "sst = sexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=sprojects,outdir=staging_results_dir)\n",
     "\n",
-    "vsprojects = ['SEQ_Open-R3','SEQ_Open-A3']\n",
+    "vsprojects = vsexp.get_project_ids(node='program',name=['SEQ_Open'])\n",
     "vst = vsexp.get_node_tsvs(node='imaging_study', overwrite=True, projects=vsprojects,outdir=validatestaging_results_dir)\n",
     "\n",
     "projects = sprojects + vsprojects"
